@@ -4,7 +4,7 @@
 ## Makefile for OpenSSL
 ##
 
-VERSION=0.9.8k
+VERSION=0.9.8l
 MAJOR=0
 MINOR=9.8
 SHLIB_VERSION_NUMBER=0.9.8
@@ -13,8 +13,8 @@ SHLIB_MAJOR=0
 SHLIB_MINOR=9.8
 SHLIB_EXT=.so.$(SHLIB_MAJOR).$(SHLIB_MINOR)
 PLATFORM=linux-openwrt
-OPTIONS=--prefix=/usr --openssldir=/etc/ssl -Os -pipe -mips32 -mtune=mips32 -funit-at-a-time -DHAVE_AR531X -ldl -DOPENSSL_SMALL_FOOTPRINT enable-zlib-dynamic no-aes192 no-ans1 no-camellia no-capieng no-cms no-ec no-ecdh no-ecdsa no-engines no-err no-gmp no-hw no-idea no-jpake no-krb5 no-md2 no-mdc2 no-montasm no-perlasm no-rc5 no-rfc3779 no-ripemd no-rmd160 no-seed no-sha0 no-shared no-smime no-sse2 no-threads
-CONFIGURE_ARGS=linux-openwrt --prefix=/usr --openssldir=/etc/ssl -Os -pipe -mips32 -mtune=mips32 -funit-at-a-time -DHAVE_AR531X -ldl -DOPENSSL_SMALL_FOOTPRINT no-idea no-md2 no-mdc2 no-rc5 no-sha0 no-smime no-rmd160 no-aes192 no-ripemd no-camellia no-ans1 no-krb5 no-ec no-err no-hw no-threads zlib-dynamic no-engines no-sse2 no-perlasm
+OPTIONS=--prefix=/usr --openssldir=/etc/ssl -Os -pipe -mips32 -mtune=mips32 -funit-at-a-time -DHAVE_AR531X -ldl -DOPENSSL_SMALL_FOOTPRINT enable-threads enable-zlib-dynamic no-aes192 no-ans1 no-camellia no-capieng no-cms no-ec no-ecdh no-ecdsa no-engines no-err no-gmp no-hw no-idea no-jpake no-krb5 no-md2 no-mdc2 no-montasm no-perlasm no-rc5 no-rfc3779 no-ripemd no-rmd160 no-seed no-sha0 no-shared no-smime no-sse2
+CONFIGURE_ARGS=linux-openwrt --prefix=/usr --openssldir=/etc/ssl -Os -pipe -mips32 -mtune=mips32 -funit-at-a-time -DHAVE_AR531X -ldl -DOPENSSL_SMALL_FOOTPRINT no-idea no-md2 no-mdc2 no-rc5 no-sha0 no-smime no-rmd160 no-aes192 no-ripemd no-camellia no-ans1 no-krb5 no-ec no-err no-hw threads zlib-dynamic no-engines no-sse2 no-perlasm
 SHLIB_TARGET=linux-shared
 
 # HERE indicates where this Makefile lives.  This can be used to indicate
@@ -60,7 +60,7 @@ OPENSSLDIR=/etc/ssl
 # PKCS1_CHECK - pkcs1 tests.
 
 CC= mips-linux-uclibc-gcc
-CFLAG= -DZLIB_SHARED -DZLIB -DDSO_DLFCN -DHAVE_DLFCN_H -Os -pipe -mips32 -mtune=mips32 -funit-at-a-time -DHAVE_AR531X -DOPENSSL_SMALL_FOOTPRINT -DOPENSSL_NO_ERR -DOPENSSL_NO_HW -DTERMIO $(OPENWRT_OPTIMIZATION_FLAGS) -fomit-frame-pointer -Wall
+CFLAG= -DZLIB_SHARED -DZLIB -DOPENSSL_THREADS -D_REENTRANT -DDSO_DLFCN -DHAVE_DLFCN_H -Os -pipe -mips32 -mtune=mips32 -funit-at-a-time -DHAVE_AR531X -DOPENSSL_SMALL_FOOTPRINT -DOPENSSL_NO_ERR -DOPENSSL_NO_HW -DTERMIO $(OPENWRT_OPTIMIZATION_FLAGS) -fomit-frame-pointer -Wall
 DEPFLAG= -DOPENSSL_NO_AES192 -DOPENSSL_NO_ANS1 -DOPENSSL_NO_CAMELLIA -DOPENSSL_NO_CAPIENG -DOPENSSL_NO_CMS -DOPENSSL_NO_EC -DOPENSSL_NO_ECDH -DOPENSSL_NO_ECDSA -DOPENSSL_NO_ENGINES -DOPENSSL_NO_GMP -DOPENSSL_NO_IDEA -DOPENSSL_NO_JPAKE -DOPENSSL_NO_MD2 -DOPENSSL_NO_MDC2 -DOPENSSL_NO_PERLASM -DOPENSSL_NO_RC5 -DOPENSSL_NO_RFC3779 -DOPENSSL_NO_RIPEMD -DOPENSSL_NO_RMD160 -DOPENSSL_NO_SEED -DOPENSSL_NO_SHA0 -DOPENSSL_NO_SMIME
 PEX_LIBS= 
 EX_LIBS= -ldl -ldl
@@ -69,7 +69,7 @@ ARFLAGS=
 AR=ar $(ARFLAGS) r
 ARD=ar $(ARFLAGS) d
 RANLIB= /usr/bin/ranlib
-PERL= /usr/bin/perl
+PERL= /usr/bin/perl5
 TAR= tar
 TARFLAGS= --no-recursion
 MAKEDEPPROG=makedepend
