@@ -1,4 +1,4 @@
-#!/usr/bin/perl
+#!/usr/bin/perl5
 #
 # CA - wrapper around ca to make it easier to use ... basically ca requires
 #      some setup stuff to be done before you can use it and this makes
